--- a/web/code.html
+++ b/web/code.html
@@ -1,14 +1,53 @@
 <!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+
+input[type=submit] {
+  background-color: #47a9e6;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #315b82;
+}
+
+.container {
+  max-width: 500px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+</style>
 </head>
 <body>
-    <form action="/submit-code" method="post">
-        2FA Code: <input name="code" type="text" /> <br />
-        <input type="submit" />
-    </form>
+
+<h3>Enter 2FA Code</h3>
+<div class="container">
+  <form action="/submit-code" method="post">
+    <label for="2facode">Code</label>
+    <input type="text" id="code" name="code">
+    <input type="submit" value="Submit">
+  </form>
+</div>
+
 </body>
 </html>
