--- a/web/account.html
+++ b/web/account.html
@@ -56,7 +56,7 @@ Use this form to acquire a refresh token from Ring.com.  Submit the login inform
 <br>
 <h3>Login</h3>
 <div class="container">
-  <form action="/submit-account" method="post">
+  <form action="./submit-account" method="post">
     <label for="email">Email</label>
     <input type="text" id="email" name="email">
     <label for="password">Password</label>
