Fix issue with web token generator
* Web token generator was causing two tokens to be sent.

--- a/web/account-error.html
+++ b/web/account-error.html
@@ -57,7 +57,7 @@ Use this form to acquire a refresh token from Ring.com.  Submit the login inform
 <p style="color:Red;">Authentication Failed.  Check the username/password and try again.</p>
 <h3>Login</h3>
 <div class="container">
-  <form action="./submit-account" method="post">
+  <form action="/submit-account" method="post">
     <label for="email">Email</label>
     <input type="text" id="email" name="email">
     <label for="password">Password</label>
