--- a/web/code-error.html
+++ b/web/code-error.html
@@ -43,7 +43,7 @@ input[type=submit]:hover {
 <h3>Enter 2FA Code</h3>
 <p style="color:Red;">2FA code was not accepted.  Verify code and try again.</p>
 <div class="container">
-  <form action="./submit-code" method="post">
+  <form action="/submit-code" method="post">
     <label for="2facode">Code</label>
     <input type="text" id="code" name="code">
     <input type="submit" value="Submit">
