--- a/web/code.html
+++ b/web/code.html
@@ -42,7 +42,7 @@ input[type=submit]:hover {
 
 <h3>Enter 2FA Code</h3>
 <div class="container">
-  <form action="./submit-code" method="post">
+  <form action="/submit-code" method="post">
     <label for="2facode">Code</label>
     <input type="text" id="code" name="code">
     <input type="submit" value="Submit">
