--- a/web/account.html
+++ b/web/account.html
@@ -93,11 +93,11 @@ if (getCookie('error')) {
   document.getElementById("errormsg").innerHTML = getCookie('error');
 }
 function checkDarkMode() {
-  if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+  //if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
     document.getElementById("txt1").style.color = "white";
     document.getElementById("txt2").style.color = "white";
     document.getElementById("txt3").style.color = "white";
-  }
+  //}
 }
 </script>
 </body>
