--- a/web/account.html
+++ b/web/account.html
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script type="text/javascript">
-  window.onload = function() {
-      if (parent) {
-          var oHead = document.getElementsByTagName("head")[0];
-          var arrStyleSheets = parent.document.getElementsByTagName("style");
-          for (var i = 0; i < arrStyleSheets.length; i++)
-              oHead.appendChild(arrStyleSheets[i].cloneNode(true));
-      }
-  }
-  </script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {font-family: Arial, Helvetica, sans-serif; max-width: 500px;}
@@ -52,6 +42,7 @@ input[type=submit]:hover {
 }
 
 .container {
+  color: black;
   max-width: 500px;
   border-radius: 5px;
   background-color: #f2f2f2;
