--- a/web/account.html
+++ b/web/account.html
@@ -48,10 +48,9 @@ input[type=submit]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
-@media (prefers-color-scheme:dark) {
-  html {
-    color: white
-  }
+html {
+  color: white;
+}
 }
 </style>
 </head>
