--- a/web/account.html
+++ b/web/account.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {font-family: Arial, Helvetica, sans-serif; max-width: 500px;}
+body {font-family: Arial, Helvetica, sans-serif; max-width: 500px; color: white; background-color: gray;}
 * {box-sizing: border-box;}
 
 input[type=text], select, textarea {
@@ -46,6 +46,7 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+  color: black;
 }
 </style>
 </head>
