--- a/web/token.html
+++ b/web/token.html
@@ -7,6 +7,8 @@ body {
     max-width: 500px;
     margin-top: 20px;
     word-wrap: break-word;
+    color: white; 
+    background-color: gray;
 }
 
 .button { 
@@ -20,6 +22,9 @@ body {
 
 .button:hover {
     background-color: #315b82
+}
+textarea {
+    color: black;
 }
 </style>
 </head>
