--- a/web/code.html
+++ b/web/code.html
@@ -42,7 +42,7 @@ input[type=submit]:hover {
 <body>
 
 <h3>Enter 2FA Code</h3>
-<p style="background-color:Red;" id="errormsg"></p></p>
+<p style="background-color:Red;" id="errormsg"></p></br>
 <div class="container">
   <form action="./submit-code" method="post">
     <label for="2facode">Code</label>
