--- a/web/restart.html
+++ b/web/restart.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {font-family: Arial, Helvetica, sans-serif; color: white; background-color: gray;}
+body {font-family: Arial, Helvetica, sans-serif; max-width: 500px; color: white; background-color: gray;}
 </style>
 </head>
 <body>
