--- a/web/code.html
+++ b/web/code.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {font-family: Arial, Helvetica, sans-serif;}
+body {font-family: Arial, Helvetica, sans-serif; max-width: 500px; color: white; background-color: gray;}
 * {box-sizing: border-box;}
 
 input[type=text], select, textarea {
@@ -35,13 +35,14 @@ input[type=submit]:hover {
   border-radius: 5px;
   background-color: #f2f2f2;
   padding: 20px;
+  color: black;
 }
 </style>
 </head>
 <body>
 
 <h3>Enter 2FA Code</h3>
-<p style="color:Red;" id="errormsg"></p></p>
+<p style="background-color:Red;" id="errormsg"></p></br>
 <div class="container">
   <form action="./submit-code" method="post">
     <label for="2facode">Code</label>
