--- a/web/restart.html
+++ b/web/restart.html
@@ -8,7 +8,6 @@ body {font-family: Arial, Helvetica, sans-serif; max-width: 500px; color: white;
 </head>
 <body>
 <h3>Refresh Token Generation Complete</h3>
-The Home Assistant <b>ring-mqtt addon</b> will now automatically connect using the generated token.<br>
-No additional configuration steps are required, please check the addon logs to monitor progress.
+The <b>Home Assistant ring-mqtt Add-on</b> will now automatically connect using the generated token.  No additional configuration steps are required, please check the addon logs to monitor progress.
 </body>
 </html>
