--- a/web/connected.html
+++ b/web/connected.html
@@ -25,10 +25,11 @@ input[type=submit]:hover {
 </head>
 <body>
 <h3>Ring Device Addon Connected</h3>
-It appears that this addon is already connected to Ring. To force generation of a new token click the button below.
+It appears that this addon is already authenticated and connected to the Ring API, no additional action is required.
+If you wish to force reauthentication, for example, to change the account used by this addon, clicking the button below will restart the authentication process.
 <div class="container">
     <form action="./force-token-generation" method="get">
-      <input type="submit" value="Regenerate Token">
+      <input type="submit" value="Force Reauthentication">
     </form>
   </div>
 </body>
