Display systemId in web UI

--- a/web/connected.html
+++ b/web/connected.html
@@ -28,9 +28,19 @@ input[type=submit]:hover {
 It appears that this addon is already authenticated and connected to the Ring API, no additional action is required.
 If you wish to force reauthentication, for example, to change the account used by this addon, clicking the button below will restart the authentication process.
 <div class="container">
-    <form action="./force-token-generation" method="get">
-      <input type="submit" value="Force Reauthentication">
-    </form>
-  </div>
+  <form action="./force-token-generation" method="get">
+    <input type="submit" value="Force Reauthentication">
+  </form>
+</div>
+</br><p style="background-color:darkgreen;" id="systemId"></p>
+<script>
+  function getCookie(key) {
+      var keyValue = document.cookie.match('(^|;) ?' + key + '=([^;]*)(;|$)');
+      return keyValue ? keyValue[2] : null;
+  }
+  if (getCookie('systemId')) {
+      document.getElementById("systemId").innerHTML = getCookie('systemId')
+  }
+</script>
 </body>
 </html>
