--- a/web/connected.html
+++ b/web/connected.html
@@ -32,14 +32,14 @@ If you wish to force reauthentication, for example, to change the account used b
     <input type="submit" value="Force Reauthentication">
   </form>
 </div>
-</br><p style="background-color:darkgreen;" id="systemId"></p>
+</br><p style="color:darkgreen;" id="systemId"></p>
 <script>
   function getCookie(key) {
       var keyValue = document.cookie.match('(^|;) ?' + key + '=([^;]*)(;|$)');
       return keyValue ? keyValue[2] : null;
   }
   if (getCookie('systemId')) {
-      document.getElementById("systemId").innerHTML = getCookie('systemId')
+      document.getElementById("systemId").innerHTML = `Device Name: ${getCookie('systemId')}`
   }
 </script>
 </body>
