--- a/web/connected.html
+++ b/web/connected.html
@@ -25,6 +25,7 @@ input[type=submit]:hover {
 </head>
 <body>
 <h3>Ring Device Addon Connected</h3>
+<p style="color:darkgreen;" id="systemId"></p>
 It appears that this addon is already authenticated and connected to the Ring API, no additional action is required.
 If you wish to force reauthentication, for example, to change the account used by this addon, clicking the button below will restart the authentication process.
 <div class="container">
@@ -32,7 +33,6 @@ If you wish to force reauthentication, for example, to change the account used b
     <input type="submit" value="Force Reauthentication">
   </form>
 </div>
-</br><p style="color:darkgreen;" id="systemId"></p>
 <script>
   function getCookie(key) {
       var keyValue = document.cookie.match('(^|;) ?' + key + '=([^;]*)(;|$)');
