--- a/web/code.html
+++ b/web/code.html
@@ -1,67 +1,168 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {font-family: Arial, Helvetica, sans-serif; max-width: 500px; color: white; background-color: gray;}
-* {box-sizing: border-box;}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ring-MQTT Web Authenticator</title>
+    <style>
+        :root {
+            --primary-color: #47a9e6;
+            --primary-hover: #315b82;
+            --bg-color: #f2f2f2;
+            --error-color: #dc3545;
+            --success-color: #39ff14;
+            --text-color: #333;
+            --spacing: 1rem;
+        }
 
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, sans-serif;
+            max-width: 500px;
+            margin: 0 auto;
+            padding: var(--spacing);
+            color: white;
+            background-color: #666;
+            line-height: 1.6;
+        }
 
-input[type=submit] {
-  background-color: #47a9e6;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
+        .container {
+            background-color: var(--bg-color);
+            padding: calc(var(--spacing) * 1.5);
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            color: var(--text-color);
+            margin-top: var(--spacing);
+        }
 
-input[type=submit]:hover {
-  background-color: #315b82;
-}
+        h2 {
+            margin: 0 0 var(--spacing) 0;
+        }
 
-.container {
-  max-width: 500px;
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-  color: black;
-}
-</style>
+        h3 {
+            margin: 0 0 var(--spacing) 0;
+        }
+
+        .display-name {
+            margin: calc(var(--spacing) / 2) 0;
+            padding: 0;
+            border-radius: 4px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .display-name span {
+            color: var(--success-color);
+            font-weight: 500;
+        }
+
+        .error-message {
+            background-color: var(--error-color);
+            color: white;
+            padding: calc(var(--spacing) / 2);
+            border-radius: 4px;
+            margin: var(--spacing) 0;
+        }
+
+        .form-group {
+            margin-bottom: var(--spacing);
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: calc(var(--spacing) / 2);
+            font-weight: 500;
+        }
+
+        .form-control {
+            width: 100%;
+            padding: calc(var(--spacing) / 2);
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 1rem;
+            transition: border-color 0.2s;
+        }
+
+        .form-control:focus {
+            outline: none;
+            border-color: var(--primary-color);
+            box-shadow: 0 0 0 2px rgba(71, 169, 230, 0.2);
+        }
+
+        .btn {
+            background-color: var(--primary-color);
+            color: white;
+            padding: calc(var(--spacing) / 2) var(--spacing);
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 1rem;
+            transition: background-color 0.2s;
+            width: 100%;
+        }
+
+        .btn:hover {
+            background-color: var(--primary-hover);
+        }
+
+        .btn:focus {
+            outline: none;
+            box-shadow: 0 0 0 2px rgba(71, 169, 230, 0.4);
+        }
+
+        @media (max-width: 600px) {
+            body {
+                padding: calc(var(--spacing) / 2);
+            }
+
+            .container {
+                padding: var(--spacing);
+            }
+        }
+    </style>
 </head>
 <body>
+    <h2>Ring-MQTT Two-Factor Authentication</h2>
+    <div id="displayName" class="display-name">Device Name: <span></span></div>
+    <p id="errormsg" class="error-message" style="display: none;"></p>
 
-<h2>Enter 2FA Code</h2>
-<h3 id="systemId"></h3>
-<p style="background-color:Red;" id="errormsg"></p></br>
-<div class="container">
-  <form action="./submit-code" method="post">
-    <label for="2facode">Code</label>
-    <input type="text" id="code" name="code">
-    <input type="submit" value="Submit">
-  </form>
-</div>
-<script>
-  function getCookie(key) {
-    var keyValue = document.cookie.match('(^|;) ?' + key + '=([^;]*)(;|$)');
-    return keyValue ? keyValue[2] : null;
-  }
-  if (getCookie('error')) {
-    document.getElementById("errormsg").innerHTML = getCookie('error')
-  }
-  if (getCookie('systemId')) {
-    document.getElementById("systemId").innerHTML = `Device Name: <span style='color:chartreuse'> ${getCookie('systemId')}</span>`
-  }
-</script>
+    <div class="container">
+        <form action="./submit-code" method="post">
+            <div class="form-group">
+                <label for="code">Enter 2FA Code</label>
+                <input type="text"
+                       id="code"
+                       name="code"
+                       class="form-control"
+                       autocomplete="one-time-code"
+                       inputmode="numeric"
+                       required
+                       aria-required="true">
+            </div>
+            <button type="submit" class="btn">Submit</button>
+        </form>
+    </div>
+
+    <script>
+        // Cookie handling
+        function getCookie(key) {
+            const value = document.cookie.match('(^|;) ?' + key + '=([^;]*)(;|$)');
+            return value ? decodeURIComponent(value[2]) : null;
+        }
+
+        // Error message handling
+        const errorMessage = getCookie('error');
+        const errorElement = document.getElementById('errormsg');
+        if (errorMessage) {
+            errorElement.style.display = 'block';
+            errorElement.textContent = errorMessage;
+        }
+
+        // System ID display
+        const displayName = getCookie('displayName');
+        if (displayName) {
+            document.querySelector('#displayName span').textContent = displayName;
+        }
+    </script>
 </body>
 </html>
